[gd_scene load_steps=14 format=3 uid="uid://coxf56dht10bo"]

[ext_resource type="Script" path="res://scenes/usa/questions/drapeau.gd" id="1_gjaa5"]
[ext_resource type="FontFile" uid="uid://b4mplch8yuwbw" path="res://assets/visuels/font/retro.ttf" id="2_lpjcc"]
[ext_resource type="Theme" uid="uid://bnmaa78tph0x" path="res://assets/style/dragButton.tres" id="3_a8snc"]
[ext_resource type="Texture2D" uid="uid://cwpc8q4ac0wtl" path="res://assets/visuels/drag/australie.png" id="4_wjtmc"]
[ext_resource type="Texture2D" uid="uid://dtypdd6rapsy8" path="res://assets/visuels/drag/usa.png" id="5_utxsm"]
[ext_resource type="Texture2D" uid="uid://b158aofg8ar2i" path="res://assets/visuels/drag/malaisie.png" id="6_tww22"]
[ext_resource type="Texture2D" uid="uid://dtm5ee6a2onc2" path="res://assets/visuels/drag/liberia.png" id="7_1uc4r"]
[ext_resource type="Theme" uid="uid://baddwpgxvm816" path="res://assets/style/buttonSettings.tres" id="8_2ttyp"]
[ext_resource type="AudioStream" uid="uid://b8c3fybw50a2x" path="res://assets/sound/looseSound.wav" id="9_nx1yf"]
[ext_resource type="AudioStream" uid="uid://oevq42t28t5f" path="res://assets/sound/winSound.wav" id="10_npaej"]
[ext_resource type="AudioStream" uid="uid://r3a0aiqbeirj" path="res://assets/sound/questions.wav" id="11_70y71"]

[sub_resource type="LabelSettings" id="LabelSettings_ctcmf"]
font = ExtResource("2_lpjcc")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_wucrl"]
font_size = 80

[node name="question2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gjaa5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.486275, 0.768627, 0.682353, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quel est le drapeau des Etats-Unis ?"
label_settings = SubResource("LabelSettings_ctcmf")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="australie" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a8snc")
icon = ExtResource("4_wjtmc")

[node name="usa" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a8snc")
icon = ExtResource("5_utxsm")

[node name="malaisie" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a8snc")
icon = ExtResource("6_tww22")

[node name="liberia" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_a8snc")
icon = ExtResource("7_1uc4r")

[node name="retour" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_2ttyp")
text = "Retour"

[node name="bravo" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.75
anchor_right = 0.7
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
text = "Bravo !"
label_settings = SubResource("LabelSettings_wucrl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="perdu" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.75
anchor_right = 0.7
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
text = "Perdu..."
label_settings = SubResource("LabelSettings_wucrl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="looseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_nx1yf")

[node name="winSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_npaej")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_70y71")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/australie" to="." method="_on_australie_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/usa" to="." method="_on_usa_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/malaisie" to="." method="_on_malaisie_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/liberia" to="." method="_on_liberia_pressed"]
[connection signal="pressed" from="retour" to="." method="_on_retour_pressed"]
[connection signal="finished" from="looseSound" to="." method="_on_loose_sound_finished"]
[connection signal="finished" from="winSound" to="." method="_on_win_sound_finished"]
